--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "yarn test --watchAll",
+    "test": "yarn test",
     "prepush": "yarn run test",
     "eject": "react-scripts eject"
   },
