--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:all": "set CI=true && react-scripts test",
     "prepush": "yarn run test",
     "eject": "react-scripts eject"
   },
